new many changes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,3 +58,12 @@ a {
 .swiper-button-next::after {
   display: none;
 }
+.swiper-wrapper {
+  padding-bottom: 30px;
+}
+
+.swiper-container-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+  bottom: 0px !important;
+}
